Estilizando as últimas seções

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div>
-                <img src="assets/logo.svg" alt="TechNews logo">
+                <img src="assets/Logo.svg" alt="TechNews logo">
             </div>
 
             <div>
@@ -44,9 +44,10 @@
 
     <main class="grid container">
         <section id="featured" class="grid grid-flow-col gap-16">
-            <div class="card">
+            <figure class="card">
                 <img src="assets/images/Image 01.png" alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
                 eficiência nas residências.">
+
                 <figcaption>
                     <span class="content-tag">robótica</span>
                     <h2 class="text-2xl">
@@ -238,7 +239,7 @@
             </div>
         </section>
 
-        <div>
+        <aside>
             <div id="ads">
                 <img src="assets/Ads.png" alt="">
             </div>
@@ -331,8 +332,7 @@
                     </article>
                 </div>
             </section>
-        </div>
-
+        </aside>
     </main>
 </body>
 
